More tinkering with the page
Co-Authored-By: hannalonns <76208590+hannalonns@users.noreply.github.com>
Co-Authored-By: jopsefin <71291802+jopsefin@users.noreply.github.com>
Co-Authored-By: EdvinOwetz <76057126+EdvinOwetz@users.noreply.github.com>
Co-Authored-By: meglodx <75421299+meglodx@users.noreply.github.com>

--- a/account.html
+++ b/account.html
@@ -56,13 +56,12 @@
         </nav>
     </header>
     <main role="main" class="container-fluid profile">
-        <!--JOBBA ENDAST INOM 'main'-->
         <div class="profile__images">
-            <img class="profile__portrait" src="./img/webp/profile_sm.webp" alt="Anna" srcset="./img/webp/profile_sm.webp 991w, ./img/webp/profile_lg.webp 992w" />
+            <img class="profile__portrait" src="./img/jpg/profile_backup.jpg" alt="Anna" srcset="./img/webp/profile_xs.webp 767w, ./img/webp/profile_lg.webp 768w" />
         </div>
         <section class="row col personal__info">
-            <h2>Anna Andersson</h2>
-            <h3>Tillf. Transportledare</h3>
+            <h2 class="personal__headline">Anna Andersson</h2>
+            <h3 class="personal__headline">Tillf. Transportledare</h3>
             <ul>
                 <li>
                     <p>Logistik AB</p>
@@ -80,15 +79,15 @@
         <hr class="divider">
         <div class="section__wrap">
             <section class="row col presentation">
-                <h3>Presentation</h3>
+                <h3 class="presentation__headline">Presentation</h3>
                 <p>
-                    Anna har lång erfarenhet av att ta hand om människor. Hon började redan för 20 år sedan och har under åren mött många olika personer i sitt yrke. Arbetet innebär att Anna byggt upp både en stor social kompetens men också lärt sig ta hand om logistik.
-                    Arbetsbelastningen är emellanåt hög, men det ger också en extra utmaning. I framtiden hoppas Anna bli utsedd till Förste Transportledare.
+                    Anna har lång erfarenhet av att ta hand om logistik. Hon har under åren också mött många olika personer i sitt yrke. Arbetet innebär att Anna byggt upp både en stor social kompetens men också lärt sig ta hand om logistik.
+                    Arbetsbelastningen är emellanåt hög, men det ser Anna som en extra utmaning. I framtiden hoppas Anna bli utsedd till ansvarig Transportledare och ser ljust på sin framtida karriär.
                 </p>
             </section>
             <hr class="divider">
             <section class="row col knowledge">
-                <h3>Kunskapsområden</h3>
+                <h3 class="knowledge__headline">Kunskapsområden</h3>
                 <div class="knowledge__prog">
                     <p>Huvudstyrkor</p>
                     <label for="Logistik">Logistik</label>
@@ -117,7 +116,7 @@
         <section class="row col">
             <table class="table__resp">
                 <caption class="table__caption">
-                    <h3>Ansvarsområden</h3>
+                    <h3 class="table__headline">Ansvarsområden</h3>
                 </caption>
                 <thead class="table__head">
                     <tr>
@@ -259,7 +258,6 @@
             </table>
         </section>
     </main>
-    <!--JOBBA ENDAST INOM 'main'-->
     <footer class="page-footer pt-5 mt-5">
         <div class="container-fluid row around start-lg">
             <div class="col-12 mv-4 col-md-8 row around start-md">
