--- a/account.html
+++ b/account.html
@@ -59,8 +59,7 @@
     <main role="main" class="container-fluid profile">
         <div class="profile__images">
             <img class="profile__portrait" src="./img/jpg/profile_backup.jpg" alt="Anna"
-                srcset="./img/webp/profile_xs.webp 125w, ./img/webp/profile_lg.webp 150w"
-                sizes="(max-width: 767px) 125px,(min-width: 768px) 150px" />
+                srcset="./img/webp/profile_xs.webp 768w, ./img/webp/profile_lg.webp 1600w" />
         </div>
         <section class="row col personal__info">
             <h2 class="personal__headline">Anna Andersson</h2>
