fixed table border radius at mobile

--- a/account.html
+++ b/account.html
@@ -220,8 +220,10 @@
               <th class="courses__table-th">GD</th>
             </tr>
           </thead>
-          <tbody class="courses_table-body">
-            <tr class="courses__table-tr courses__table-tr--radius-top">
+          <tbody class="courses__tbody--tablet-border">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders courses__table-tr--border-top"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK26C
               </td>
@@ -249,7 +251,9 @@
                 Ja
               </td>
             </tr>
-            <tr class="courses__table-tr courses__table-tr--bgcolor1">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders courses__table-tr--bgcolor1"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK298
               </td>
@@ -277,7 +281,9 @@
                 Nej
               </td>
             </tr>
-            <tr class="courses__table-tr">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK297
               </td>
@@ -305,7 +311,9 @@
                 Nej
               </td>
             </tr>
-            <tr class="courses__table-tr courses__table-tr--bgcolor1">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders courses__table-tr--bgcolor1"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK2F5
               </td>
@@ -333,7 +341,9 @@
                 Nej
               </td>
             </tr>
-            <tr class="courses__table-tr">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK2F8
               </td>
@@ -362,7 +372,9 @@
               </td>
             </tr>
 
-            <tr class="courses__table-tr courses__table-tr--bgcolor1">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders courses__table-tr--bgcolor1"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK2H8
               </td>
@@ -391,7 +403,9 @@
               </td>
             </tr>
 
-            <tr class="courses__table-tr">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK2BD
               </td>
@@ -420,7 +434,9 @@
               </td>
             </tr>
 
-            <tr class="courses__table-tr courses__table-tr--bgcolor1">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders courses__table-tr--bgcolor1"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK2H9
               </td>
@@ -448,7 +464,9 @@
                 Nej
               </td>
             </tr>
-            <tr class="courses__table-tr">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK2JL
               </td>
@@ -476,7 +494,9 @@
                 Nej
               </td>
             </tr>
-            <tr class="courses__table-tr courses__table-tr--bgcolor1">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders courses__table-tr--bgcolor1"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GIK2TS
               </td>
@@ -505,7 +525,9 @@
                 Nej
               </td>
             </tr>
-            <tr class="courses__table-tr courses__table-tr--bgcolor1-tablet">
+            <tr
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders courses__table-tr--bgcolor1-tablet"
+            >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GMI2C8
               </td>
@@ -534,7 +556,7 @@
               </td>
             </tr>
             <tr
-              class="courses__table-tr courses__table-tr--bgcolor1 courses__table-tr--radius-bottom"
+              class="courses__table-tr courses__table-tr--tablet-hidden-borders courses__table-tr--bgcolor1 courses__table-tr--border-bottom"
             >
               <td class="courses__table-td courses__table-td--mobile-text1">
                 GMI28T
