--- a/account.html
+++ b/account.html
@@ -84,8 +84,10 @@
         src="./img/jpg/profile_backup.jpg"
         alt="Anna"
         srcset=" 
-        ./img/webp/profilbild_xs.webp  767w,
-        ./img/webp/profilbild_lg.webp 1600w 
+        ./img/webp/profilbild_xs.webp 468w,
+        ./img/webp/profilbild_sm.webp 767w,
+        ./img/webp/profilbild_md.webp 992w,
+        ./img/webp/profilbild_lg.webp 1200w
         "
       />
       </div>
